# Standly

./: .breakpoints  .env  .gitignore  .replit  README.md  app.py  bot.py  daily_updates.py  data.json  database.py  goals.py  habits.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  wuphf.py
