[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.1"
app = "^0.0.1"
discord = "^2.3.2"
twilio = "^8.11.0"
discord-py = "^2.3.2"
flask = "^2.0.0"
replit = "^3.5.0"
consultor = "^0.2.0"
databases = "^0.8.0"
pytz = "^2023.3.post1"
backoff = "^2.2.1"
aiocron = "^1.8"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"